# pim-sieve-editor

./: .craft.ini  .flatpak-manifest.json  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  REUSE.toml  config-sieveeditor.h.cmake  sieveeditor.categories  sieveeditor.renamecategories
.reuse/: dep5
autotests/: CMakeLists.txt  serversievesettingstest.cpp  serversievesettingstest.h  sieveeditorconfigureserverpagetest.cpp  sieveeditorconfigureserverpagetest.h  sieveeditorutiltest.cpp  sieveeditorutiltest.h
doc/: CMakeLists.txt  index.docbook
po/ar/: sieveeditor.po
po/ast/: sieveeditor.po
po/az/: sieveeditor.po
po/bg/: sieveeditor.po
po/bs/: sieveeditor.po
po/ca/: sieveeditor.po
po/ca@valencia/: sieveeditor.po
po/cs/: sieveeditor.po
po/da/: sieveeditor.po
po/de/: sieveeditor.po
po/en_GB/: sieveeditor.po
po/eo/: sieveeditor.po
po/es/: sieveeditor.po
po/et/: sieveeditor.po
po/eu/: sieveeditor.po
po/fi/: sieveeditor.po
po/fr/: sieveeditor.po
po/ga/: sieveeditor.po
po/gl/: sieveeditor.po
po/he/: sieveeditor.po
po/hi/: sieveeditor.po
po/hu/: sieveeditor.po
po/ia/: sieveeditor.po
po/it/: sieveeditor.po
po/ja/: sieveeditor.po
po/ka/: sieveeditor.po
po/ko/: sieveeditor.po
po/lt/: sieveeditor.po
po/lv/: sieveeditor.po
po/nb/: sieveeditor.po
po/nds/: sieveeditor.po
po/nl/: sieveeditor.po
po/pl/: sieveeditor.po
po/pt/: sieveeditor.po
po/pt_BR/: sieveeditor.po
po/ro/: sieveeditor.po
po/ru/: sieveeditor.po
po/sa/: sieveeditor.po
po/sk/: sieveeditor.po
po/sl/: sieveeditor.po
po/sr/: sieveeditor.po
src/: CMakeLists.txt  Messages.sh  config-pim-sieve-editor.h.in  libsieveeditor_private_export.h  main.cpp  org.kde.sieveeditor.appdata.xml  org.kde.sieveeditor.desktop  readserversieveconfigjob.cpp  readserversieveconfigjob.h  serversievelistwidget.cpp  serversievelistwidget.h  serversievesettings.cpp  serversievesettings.h  serversievesettingsdialog.cpp  serversievesettingsdialog.h  sieveeditor-version.h.cmake  sieveeditor-version.h.in  sieveeditor.qrc  sieveeditorbookmarks.cpp  sieveeditorbookmarks.h  sieveeditorcentralwidget.cpp  sieveeditorcentralwidget.h  sieveeditorcommandlineparser.cpp  sieveeditorcommandlineparser.h  sieveeditorconfiguredialog.cpp  sieveeditorconfiguredialog.h  sieveeditorconfigureserverpage.cpp  sieveeditorconfigureserverpage.h  sieveeditorconfigureserverwidget.cpp  sieveeditorconfigureserverwidget.h  sieveeditoremptytabwidgetlabel.cpp  sieveeditoremptytabwidgetlabel.h  sieveeditormainwidget.cpp  sieveeditormainwidget.h  sieveeditormainwindow.cpp  sieveeditormainwindow.h  sieveeditormanagesievewidget.cpp  sieveeditormanagesievewidget.h  sieveeditorpagewidget.cpp  sieveeditorpagewidget.h  (+17 more)
src/apps/: CMakeLists.txt  main.cpp
src/autotests/: CMakeLists.txt  serversievesettingstest.cpp  serversievesettingstest.h  sieveeditorcommandlineparsertest.cpp  sieveeditorcommandlineparsertest.h  sieveeditorconfigureserverpagetest.cpp  sieveeditorconfigureserverpagetest.h  sieveeditorutiltest.cpp  sieveeditorutiltest.h
src/data/: org.kde.sieveeditor.appdata.xml  org.kde.sieveeditor.desktop  sieveeditor-internal-tools.json
src/icons/: CMakeLists.txt
src/importwizard/: importimapsettingfinishpage.cpp  importimapsettingfinishpage.h  importimapsettingnofoundpage.cpp  importimapsettingnofoundpage.h  importimapsettingprogresspage.cpp  importimapsettingprogresspage.h  importimapsettingsearchpage.cpp  importimapsettingsearchpage.h  importimapsettingwizard.cpp  importimapsettingwizard.h
src/importwizard/autotests/: CMakeLists.txt  importimapsettingfinishpagetest.cpp  importimapsettingfinishpagetest.h  importimapsettingnofoundpagetest.cpp  importimapsettingnofoundpagetest.h  importimapsettingprogresspagetest.cpp  importimapsettingprogresspagetest.h  importimapsettingsakonadicheckjobtest.cpp  importimapsettingsakonadicheckjobtest.h  importimapsettingsearchpagetest.cpp  importimapsettingsearchpagetest.h  importimapsettingspasswordtest.cpp  importimapsettingspasswordtest.h  importimapsettingsthunderbirdcheckjobtest.cpp  importimapsettingsthunderbirdcheckjobtest.h
src/importwizard/autotests/data/config/imapconfigwithsieveconfig/: akonadi_imap_resource_0rc
src/importwizard/autotests/data/config/usecustomsieveconfig/: akonadi_kolab_resource_0rc
src/importwizard/autotests/data/config/usecustomsieveconfig2/: akonadi_kolab_resource_0rc
src/importwizard/autotests/data/config/usecustomsieveconfig3/: akonadi_kolab_resource_0rc
src/importwizard/autotests/data/config/usecustomsieveconfig4/: akonadi_kolab_resource_0rc
src/importwizard/autotests/data/thunderbirdencryptionnone/profile1/: prefs.js
src/importwizard/autotests/data/thunderbirdencryptionnoneoneaccount/profile1/: prefs.js
src/importwizard/autotests/data/thunderbirdencryptionssl/: profiles.ini
src/importwizard/autotests/data/thunderbirdencryptionssl/profile1/: prefs.js
src/importwizard/autotests/data/thunderbirdencryptionssloneaccount/profile1/: prefs.js
src/importwizard/autotests/data/thunderbirdencryptionstarttls/profile1/: prefs.js
src/importwizard/autotests/data/thunderbirdencryptionstarttlsoneaccount/profile1/: prefs.js
src/importwizard/checks/: abstractimapsettingscheckjob.cpp  abstractimapsettingscheckjob.h  abstractimapsettingspassword.cpp  abstractimapsettingspassword.h  importimapsettingsakonadicheckjob.cpp  importimapsettingsakonadicheckjob.h  importimapsettingsakonadipassword.cpp  importimapsettingsakonadipassword.h  importimapsettingsthunderbirdcheckjob.cpp  importimapsettingsthunderbirdcheckjob.h
src/importwizard/tests/: CMakeLists.txt  main.cpp
src/internaltoolsjob/: addnewscripttoolinternaljob.cpp  addnewscripttoolinternaljob.h
src/kconf_update/: CMakeLists.txt
src/settings/: sieveeditorglobalconfig.kcfg  sieveeditorglobalconfig.kcfgc
src/ui/: serversievesettings.ui  sieveeditorconfigureserverwidget.ui
src/userfeedback/: userfeedbackmanager.cpp  userfeedbackmanager.h
src/whatsnew/: whatsnewtranslations.cpp  whatsnewtranslations.h
(+21 files in other folders)
